--- a/assets/index.html
+++ b/assets/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <nav id="desktop-nav">
-        <div class="logo">Mayank sah hello</div>
+        <div class="logo">Mayank sah hello to me</div>
       <div>
         <ul class="nav-links">
             <li><a href="#about">About</a></li>
