buttons & profile design
Here, I have design buttons and  and done CSS part for my profile pic

--- a/assets/index.html
+++ b/assets/index.html
@@ -13,9 +13,9 @@
       <div>
         <ul class="nav-links">
             <li><a href="#about">About</a></li>
-            <li><a href="#experience">experience</a></li>
-            <li><a href="#projects">project</a></li>
-            <li><a href="#contacts ">contacts</a></li>
+            <li><a href="#experience">Experience</a></li>
+            <li><a href="#projects">Projects</a></li>
+            <li><a href="#contacts ">Contacts</a></li>
 
 
         </ul>
@@ -32,9 +32,9 @@
           </div>
          <div class="menu-links">
           <li><a href="#about" onclick="toggleMenu()">About</a></li>
-          <li><a href="#experience"onclick="toggleMenu()">experience</a></li>
-          <li><a href="#projects"onclick="toggleMenu()">project</a></li>
-          <li><a href="#contacts "onclick="toggleMenu()">contacts</a></li>
+          <li><a href="#experience"onclick="toggleMenu()">Experience</a></li>
+          <li><a href="#projects"onclick="toggleMenu()">Projects</a></li>
+          <li><a href="#contacts "onclick="toggleMenu()">Contacts</a></li>
 
 
          </div>
@@ -43,7 +43,7 @@
     </nav>
     <section id="profile">
       <div class="section__pic.container">
-        <img src="Mayankprofile1.jpg" alt="">
+        <img src="MAYANKprofile2.png" alt="my profile pic">
       </div>
       <div class="section__text">
         <p class="section__text__p1">Hello,I'm</p>
@@ -51,6 +51,14 @@
         <p class="section__text__p2">Frontend Developer</p>
         <div class="btn-container">
           <button class="btn btn-color-2" onclick="window.open('Mayank.pdf')">Download CV</button>
+          <button class="btn btn-color-1" onclick="location.href='./#contacts'">Contact info</button>
+        </div>
+        <div id="socials-container">
+          <img src="linkedin.png" alt="My linkedin profile" 
+          class="icon" onclick="location.href='https://linkedin.com/in/mayank-sah-4239701b3/'">
+          <img src="github.png" alt="My github profile " 
+          class="icon" onclick="location.href='https://github.com/Mayanksah777'">
+
         </div>
       </div>
     </section>
