--- a/assets/index.html
+++ b/assets/index.html
@@ -48,7 +48,7 @@
       <div class="section__text">
         <p class="section__text__p1">Hello,I'm</p>
         <h1 class="title">Mayank Sah</h1>
-        <p class="section__text__p2">Frontend Developer</p>
+        <p class="section__text__p2">Web Developer</p>
         <div class="btn-container">
           <button class="btn btn-color-2" onclick="window.open('Mayank.pdf')">Download CV</button>
           <button class="btn btn-color-1" onclick="location.href='./#contacts'">Contact info</button>
@@ -62,6 +62,90 @@
         </div>
       </div>
     </section>
+  <section id="about">
+    <p class="section__text__p1">Get to know More</p>
+    <h1 class="title">About Me</h1>
+    <div class="section-container">
+      <div class="section__pic-container">
+        <img src="profile3.png" alt="profile pic" 
+        class="about-pic">
+      </div>
+      <div class="about-details-container">
+        <div class="about-containers">
+          <div class="details-container">
+           <img src="experience.png" alt="experience icon"
+           class="icon">
+           <h3>Experience</h3>
+           <p>Hey I'm B.tech fourth year student with hands on skill <br> on HTML,CSS,Javascript </p>
+          </div>
+          <div class="details-container">
+            <img src="education.png" alt="education icon"
+            class="icon">
+            <h3>Education</h3>
+            <p>10+2 RKS Vidya Mandir(CBSE) <br> B.tech JIS University(2021-2025)</p>
+          </div>
+        </div>
+        <div class="text-container">
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro minima esse ipsa similique ullam fugit impedit velit enim odit amet provident molestiae culpa, omnis alias, dolores obcaecati quaerat tenetur eius harum reprehenderit in odio error aperiam! Non, esse officia repellat obcaecati suscipit veniam dolore vitae sit, assumenda facilis eos aliquam.</p>
+        </div>
+      </div>
+    </div>
+    <img src="arrow.png" alt="Arrow icon " class="icon arrow" onclick="location.href='./#experience'">
+  </section>  
+  <section id="experience">
+    <p class="section__text__p1">Explore My </p>
+    <h1 class="title">Experience</h1>
+    <div class="experience-details-container">
+      <div class="about-containers">
+        <div class="details-containers">
+          <h2 class="experience-sub-title">Web devlopment</h2>
+          <div class="article-container">
+            <article>
+              <img src="checkmark.png" alt="Experience icon"
+              class="icon">
+              <div>
+                <h3>HTML</h3>
+                <p>Experienced</p>
+              </div>
+            </article>
+            <article>
+              <img src="checkmark.png" alt="Experience icon"
+              class="icon">
+              <div>
+                <h3>Javascript</h3>
+                <p>Experienced</p>
+              </div>
+            </article>
+            <article>
+              <img src="checkmark.png" alt="Experience icon"
+              class="icon">
+              <div>
+                <h3>CSS</h3>
+                <p>Experienced</p>
+              </div>
+            </article>
+            <article>
+              <img src="checkmark.png" alt="Experience icon"
+              class="icon">
+              <div>
+                <h3>SASS</h3>
+                <p>Experienced</p>
+              </div>
+            </article>
+            <article>
+              <img src="checkmark.png" alt="Experience icon"
+              class="icon">
+              <div>
+                <h3>web3</h3>
+                <p>Experienced</p>
+              </div>
+            </article>
+          </div>
+        </div>
+      </div>
+    </div>
+
+  </section>
   <script src="script.js"></script>  
 </body>
 </html>
