--- a/assets/index.html
+++ b/assets/index.html
@@ -51,7 +51,7 @@
         <h1 class="title">Mayank Sah</h1>
         <p class="section__text__p2">Web Developer</p>
         <div class="btn-container">
-          <button class="btn btn-color-2" onclick="window.open('Mayank.pdf')">Download CV</button>
+          <button class="btn btn-color-2" onclick="window.open('mayank_resume(2).pdf')">Download CV</button>
           <button class="btn btn-color-1" onclick="location.href='./#contacts'">Contact info</button>
         </div>
         <div id="socials-container">
@@ -86,7 +86,7 @@
                   </div>
               </div>
               <div class="text-container">
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro minima esse ipsa similique ullam fugit impedit velit enim odit amet provident molestiae culpa, omnis alias, dolores obcaecati quaerat tenetur eius harum reprehenderit in odio error aperiam! Non, esse officia repellat obcaecati suscipit veniam dolore vitae sit, assumenda facilis eos aliquam.</p>
+                  <p>I have a keen interest in problem-solving and have successfully solved over 150 questions on LeetCode. My coding skills are further demonstrated by a 1200+ rating on CodeChef. Additionally, I have strong hands-on experience with the MERN stack, allowing me to build robust and efficient web applications.</p>
               </div>
           </div>
       </div>
@@ -184,7 +184,7 @@
     
       <div class="details-container color-container ">
         <div class="article-container">
-          <img src="project-1.png" alt="Project 1"
+          <img src="file (2).jpg" alt="Project 1"
           class="project-img">
         </div>
         <h2 class="experience-sub-title project-title">Project One</h2>
@@ -199,7 +199,7 @@
       </div>
       <div class="details-container color-container ">
         <div class="article-container">
-          <img src="project-2.png" alt="Project 2"
+          <img src="file (1).jpg" alt="Project 2"
           class="project-img">
         </div>
         <h2 class="experience-sub-title project-title">Project Two</h2>
