--- a/assets/index.html
+++ b/assets/index.html
@@ -51,7 +51,7 @@
         <h1 class="title">Mayank Sah</h1>
         <p class="section__text__p2">Web Developer</p>
         <div class="btn-container">
-          <button class="btn btn-color-2" onclick="window.open('mayank_resume(2).pdf')">Download CV</button>
+          <button class="btn btn-color-2" onclick="window.open('RESUME.pdf')">Download CV</button>
           <button class="btn btn-color-1" onclick="location.href='./#contacts'">Contact info</button>
         </div>
         <div id="socials-container">
@@ -86,7 +86,7 @@
                   </div>
               </div>
               <div class="text-container">
-                  <p>I have a keen interest in problem-solving and have successfully solved over 150 questions on LeetCode. My coding skills are further demonstrated by a 1200+ rating on CodeChef. Additionally, I have strong hands-on experience with the MERN stack, allowing me to build robust and efficient web applications.</p>
+                  <p>I have a keen interest in problem-solving and have successfully solved over 150+ questions on LeetCode. My coding skills are further demonstrated by a 1200+ rating on CodeChef. Additionally, I have strong hands-on experience with the MERN stack, allowing me to build robust and efficient web applications.</p>
               </div>
           </div>
       </div>
