--- a/assets/index.html
+++ b/assets/index.html
@@ -44,20 +44,20 @@
     </nav>
     <section id="profile">
       <div class="section__pic-container">
-        <img src="MAYANKprofile2.png" alt="my profile pic">
+        <img src="./res/MAYANKprofile2.png" alt="my profile pic">
       </div>
       <div class="section__text">
         <p class="section__text__p1">Hello,I'm</p>
         <h1 class="title">Mayank Sah</h1>
         <p class="section__text__p2">Web Developer</p>
         <div class="btn-container">
-          <button class="btn btn-color-2" onclick="window.open('RESUME.pdf')">Download CV</button>
+          <button class="btn btn-color-2" onclick="window.open('./res/RESUME.pdf')">Download CV</button>
           <button class="btn btn-color-1" onclick="location.href='./#contacts'">Contact info</button>
         </div>
         <div id="socials-container">
-          <img src="linkedin.png" alt="My linkedin profile" 
+          <img src="./res/linkedin.png" alt="My linkedin profile" 
           class="icon" onclick="location.href='https://linkedin.com/in/mayank-sah-4239701b3/'">
-          <img src="github.png" alt="My github profile " 
+          <img src="./res/github.png" alt="My github profile " 
           class="icon" onclick="location.href='https://github.com/Mayanksah777'">
 
         </div>
@@ -68,19 +68,19 @@
       <h1 class="title">About Me</h1>
       <div class="section-container">
           <div class="section__pic-container">
-              <img src="profile3.png" alt="Profile pic" class="about-pic"/>
+              <img src="./res/profile3.png" alt="Profile pic" class="about-pic"/>
           </div>
           <div class="about-details-container">
               <div class="about-containers">
                   <!-- Applied details-container class to Experience section -->
                   <div class="details-container"> <!-- Change made here -->
-                      <img src="experience.png" alt="Experience icon" class="icon"/>
+                      <img src="./res/experience.png" alt="Experience icon" class="icon"/>
                       <h3>Experience</h3>
                       <p>Hey I'm B.tech fourth year student with hands on skill <br> on HTML,CSS,Javascript</p>
                   </div>
                   <!-- Education section already using details-container class -->
                   <div class="details-container">
-                      <img src="education.png" alt="education icon" class="icon">
+                      <img src="./res/education.png" alt="education icon" class="icon">
                       <h3>Education</h3>
                       <p>10+2 RKS Vidya Mandir(CBSE) <br> B.tech JIS University(2021-2025)</p>
                   </div>
@@ -90,7 +90,7 @@
               </div>
           </div>
       </div>
-      <img src="arrow.png" alt="Arrow icon" class="icon arrow" onclick="location.href='./#experience'">
+      <img src="./res/arrow.png" alt="Arrow icon" class="icon arrow" onclick="location.href='./#experience'">
   </section>
   
   
@@ -103,35 +103,35 @@
           <h2 class="experience-sub-title">Frontend development</h2>
           <div class="article-container">
             <article>
-              <img src="checkmark.png" alt="Experience icon" class="icon">
+              <img src="./res/checkmark.png" alt="Experience icon" class="icon">
               <div>
                 <h3>HTML</h3>
                 <p>Experienced</p>
               </div>
             </article>
             <article>
-              <img src="checkmark.png" alt="Experience icon" class="icon">
+              <img src="./res/checkmark.png" alt="Experience icon" class="icon">
               <div>
                 <h3>JavaScript</h3>
                 <p>Basic</p>
               </div>
             </article>
             <article>
-              <img src="checkmark.png" alt="Experience icon" class="icon">
+              <img src="./res/checkmark.png" alt="Experience icon" class="icon">
               <div>
                 <h3>CSS</h3>
                 <p>Intermediate</p>
               </div>
             </article>
             <article>
-              <img src="checkmark.png" alt="Experience icon" class="icon">
+              <img src="./res/checkmark.png" alt="Experience icon" class="icon">
               <div>
                 <h3>SASS</h3>
                 <p>Intermediate</p>
               </div>
             </article>
             <article>
-              <img src="checkmark.png" alt="Experience icon" class="icon">
+              <img src="./res/checkmark.png" alt="Experience icon" class="icon">
               <div>
                 <h3>TypesScript</h3>
                 <p>Basic</p>
@@ -143,28 +143,28 @@
           <h2 class="experience-sub-title">Backend development</h2>
           <div class="article-container">
             <article>
-              <img src="checkmark.png" alt="Experience icon" class="icon">
+              <img src="./res/checkmark.png" alt="Experience icon" class="icon">
               <div>
                 <h3>Mysql</h3>
                 <p>Intermediate</p>
               </div>
             </article>
             <article>
-              <img src="checkmark.png" alt="Experience icon" class="icon">
+              <img src="./res/checkmark.png" alt="Experience icon" class="icon">
               <div>
                 <h3>Node JS</h3>
                 <p>Basic</p>
               </div>
             </article>
             <article>
-              <img src="checkmark.png" alt="Experience icon" class="icon">
+              <img src="./res/checkmark.png" alt="Experience icon" class="icon">
               <div>
                 <h3>Express JS</h3>
                 <p>Basic</p>
               </div>
             </article>
             <article>
-              <img src="checkmark.png" alt="Experience icon" class="icon">
+              <img src="./res/checkmark.png" alt="Experience icon" class="icon">
               <div>
                 <h3>Github</h3>
                 <p>Intermediate</p>
@@ -174,7 +174,7 @@
         </div>
       </div>
     </div>
-    <img src="arrow.png" alt="Arrow icon" class="icon arrow" onclick="location.href='./#projects'">
+    <img src="./res/arrow.png" alt="Arrow icon" class="icon arrow" onclick="location.href='./#projects'">
   </section>
   <section id="projects">
     <p class="section__text__p1">Browse My Recent</p>
@@ -184,7 +184,7 @@
     
       <div class="details-container color-container ">
         <div class="article-container">
-          <img src="file (2).jpg" alt="Project 1"
+          <img src="./res/file (2).jpg" alt="Project 1"
           class="project-img">
         </div>
         <h2 class="experience-sub-title project-title">Project One</h2>
@@ -199,7 +199,7 @@
       </div>
       <div class="details-container color-container ">
         <div class="article-container">
-          <img src="file (1).jpg" alt="Project 2"
+          <img src="./res/file (1).jpg" alt="Project 2"
           class="project-img">
         </div>
         <h2 class="experience-sub-title project-title">Project Two</h2>
@@ -214,7 +214,7 @@
       </div>
       </div>
     </div>
-    <img src="arrow.png" alt="Arrow icon" class="icon arrow" onclick="location.href='./#projects'">
+    <img src="./res/arrow.png" alt="Arrow icon" class="icon arrow" onclick="location.href='./#contact'">
   
   </section>
   <section id="contact">
@@ -222,11 +222,11 @@
     <h1 class="title"> Contact Me</h1>
     <div class="contact-info-upper-container">
       <div class="contact-info-container">
-        <img src="email.png" alt="Email icon" class="icon contact-icon email-icon">
+        <img src="./res/email.png" alt="Email icon" class="icon contact-icon email-icon">
          <p><a href="mailto:example@gmail.com">Example@gmail.com</a></p>
       </div>
       <div class="contact-info-container">
-        <img src="linkedin.png" alt="Linkedin icon" class="icon contact-icon">
+        <img src="./res/linkedin.png" alt="Linkedin icon" class="icon contact-icon">
          <p><a href="https://www.linkedin.com/in/mayank-sah-4239701b3/">LinkedIn</a></p>
       </div>
     </div>
