--- a/assets/index.html
+++ b/assets/index.html
@@ -214,10 +214,10 @@
       </div>
       </div>
     </div>
-    <img src="./res/arrow.png" alt="Arrow icon" class="icon arrow" onclick="location.href='./#contact'">
+    <img src="./res/arrow.png" alt="Arrow icon" class="icon arrow" onclick="location.href='./#contacts'">
   
   </section>
-  <section id="contact">
+  <section id="contacts">
     <p class="section__text__p1">Get in Touch</p>
     <h1 class="title"> Contact Me</h1>
     <div class="contact-info-upper-container">
